[tool.poetry]
name = "pydf"
version = "0.1.0"
description = ""
authors = ["Jason McGillivray <mcgillivray.jason@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cython = "^0.29.15"
pygame-sdl2 = {path = "pygame_sdl2/pygame_sdl2-2.1.0-cp38-cp38-linux_x86_64.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
